First Commit in this repo

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,5 +3,16 @@
 Contact
 {% endblock title %}
 {% block body %}
-
+<div class="container my-4" style="padding-left: 14%;">
+    <img src="https://source.unsplash.com/600x500/?contact,gmail" class="img-fluid" alt="...">
+</div>
+<h3 style="padding-left: 20%;">Contact Here!</h3>
+<div class="mb-3" style="padding-left: 20%; padding-right: 20%;">
+    <label for="exampleFormControlInput1" class="form-label"><b>Your mail to get revert back</b></label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your mail address">
+  </div>
+  <div class="mb-3" style="padding-left: 20%; padding-right: 20%;">
+    <label for="exampleFormControlTextarea1" class="form-label"><b>Enter Your Query Here</b></label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your Query"></textarea>
+  </div>
 {% endblock body %}
