--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@ Home
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-          <img src="https://source.unsplash.com/1000x500/?fruits,Supermarket" class="d-block w-100" alt="...">
+          <img src="https://images.unsplash.com/photo-1619153422227-08d462800327?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=500&ixid=MnwxfDB8MXxyYW5kb218fHx8fHx8fHwxNjIxMTA0OTAz&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1000" class="d-block w-100" alt="...">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -65,7 +65,7 @@ Home
         </div>
         <div class="col">
           <div class="card shadow-sm">
-                    <img src="https://source.unsplash.com/1000x500/?fruits,Supermarket" class="d-block w-100" alt="...">
+                    <img src="https://images.unsplash.com/photo-1620868695220-d4bf69f08938?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=500&ixid=MnwxfDB8MXxyYW5kb218fHx8fHx8fHwxNjIxMTA1MTMw&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1000" class="d-block w-100" alt="...">
 
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -81,7 +81,7 @@ Home
         </div>
         <div class="col">
           <div class="card shadow-sm">
-                      <img src="https://source.unsplash.com/1000x500/?fruits,Supermarket" class="d-block w-100" alt="...">
+                      <img src="/static/2.jfif" class="d-block w-100" alt="...">
 
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
