--- a/templates/base.html
+++ b/templates/base.html
@@ -30,11 +30,9 @@
                   Store
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/about">Grocery</a></li>
-                  <li><a class="dropdown-item" href="#">Mens Fashion</a></li>
-                  
-                  <li><a class="dropdown-item" href="#">Womens Fashion</a></li>
-                  <li><a class="dropdown-item" href="#">Kids Fashion</a></li>
+                  {% for category in categories%}
+                  <li><a class="dropdown-item" href="/?category={{category.id}}">{{category.name}}</a></li>
+                  {% endfor %}
                 </ul>
               </li>
               <li class="nav-item">
