Second Last Commit

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,4 +15,9 @@ Contact
     <label for="exampleFormControlTextarea1" class="form-label"><b>Enter Your Query Here</b></label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your Query"></textarea>
   </div>
+  
+  <button type="submit" class="btn btn-outline-dark" style="margin-left: 45%;">Send Query</button>
+  <div>
+    <hr>
+  </div>
 {% endblock body %}
