--- a/templates/index.html
+++ b/templates/index.html
@@ -3,70 +3,103 @@
 Home
 {% endblock title %}
 {% block body %}
+
+{% load check_if_prod_inCart %}
 <div class="container-fluid my-4">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://source.unsplash.com/1000x300/?mens fashion,mens clothing" class="d-block w-100" alt="">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="https://source.unsplash.com/1000x300/?mens fashion,mens clothing" class="d-block w-100" alt="">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="https://source.unsplash.com/1000x300/?grocery store,Supermarket" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="https://source.unsplash.com/1000x300/?womens fashion,womens clothing" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
+      <div class="carousel-item">
+        <img src="https://source.unsplash.com/1000x300/?grocery store,Supermarket" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://source.unsplash.com/1000x300/?womens fashion,womens clothing" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
 </div>
 
 <div class="container-fluid my-5">
 
-      <div class="row mx-auto">
-      {% for product in products%}
-        <div class="col">
-          <div class="card shadow-sm mx-auto mb-3" style = "width: 18rem;">
-           <img src="{{product.image.url}}" class="d-block w-100 h-80" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">{{product.name}}</h5>
-              <p class="card-text">{{product.description}}</p>
-              <p class="card-text"><b>Price : </b>Rs.{{product.price}}</p>
-              <p class="card-text"><b>Category : </b>"{{product.category}}"</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button onclick="document.location='http://127.0.0.1:8000/about'" type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Add To Cart</button>
-                </div>
-              </div>
+  <div class="row mx-auto">
+    {% for product in products%}
+    <div class="col" id = {{product.id}}>
+      <div class="card shadow-sm mx-auto mb-3" style="width: 18rem;">
+        <img src="{{product.image.url}}" class="d-block w-100 h-80" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{product.name}}</h5>
+          <p class="card-text">{{product.description}}</p>
+          <p class="card-text"><b>Price : </b>Rs.{{product.price}}</p>
+          <p class="card-text"><b>Category : </b>"{{product.category}}"</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
             </div>
           </div>
         </div>
-      {% endfor %}
-        
+        <div style="margin-right: 1%;" class="card-footer p-0 no-gutters">
+          <!--Footer of Card-->
+          {% if product|is_in_cart:request.session.cart %}
+          <!--"Filter" from templatetags-->
+          <div class="row" style="width: 100%; margin-left: 1%;">
+            <form action="/#{{product.id}}" method="POST" class="col-2" style="margin-right: 4%;">
+              {% csrf_token %}
+              <input hidden type="text" name="product" value="{{product.id}}">
+              <input hidden type="text" name="remove_item" value="True">
+              <input type="submit" value=" - " class="btn btn-block btn-secondary">
+            </form>
+            <div class="text-center col">
+              {{product|get_count_of_Items:request.session.cart}} in cart
+            </div>
+            <form action="/#{{product.id}}" method="POST" class="col-2" style="margin-right: 4%;">
+              {% csrf_token %}
+              <input hidden type="text" name="product" value="{{product.id}}">
+              <input type="submit" value=" + " class="btn btn-block btn-secondary">
+            </form>
+          </div>
+          {% else %}
+          <form action="/#{{product.id}}" method="POST" class="my-1">
+            {% csrf_token %}
+            <input hidden type="text" name="product" value="{{product.id}}">
+            <button onclick="document.location='http://127.0.0.1:8000/about'" type="button" style="margin-left: 0%;"
+              class="btn btn-sm btn-outline-secondary">View</button>
+            <input type="submit" class="btn btn-sm btn-outline-secondary" value="Add To Cart">
+          </form>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    {% endfor %}
 
-{% endblock body %}
+
+    {% endblock body %}
