--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,11 @@
   <title>{% block title %}{% endblock title %} | Welcome to the page! </title>
 </head>
 
-<body style="background-color: rgb(146, 229, 240);">
+<body style="background-color: #ffff;">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">E-Mart</a>
+      <img src="../static/logo.png" width="75px" height="75px">
+      <a class="navbar-brand" href="/">&#8287; Urban Roots</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,9 +26,6 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">About us</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="/services" id="navbarDropdown" role="button"
@@ -39,6 +37,9 @@
               <li><a class="dropdown-item" href="/?category={{category.id}}">{{category.name}}</a></li>
               {% endfor %}
             </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact Us</a>
